remove star from last name ---student admission
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@3222 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/app/views/student/admission1.html.erb
+++ b/app/views/student/admission1.html.erb
@@ -88,7 +88,7 @@
       <hr class="label-underline"></hr>
 
       <div class="label-field-pair">
-        <label for="student_grade"><%= t('last_name') %><span class="necessary-field">*</span> </label>
+        <label for="student_grade"><%= t('last_name') %></label>
         <div class="text-input-bg"><%= s.text_field :last_name %></div>
       </div>
 
