style issue in student edit update button in chrome
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@3227 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/app/views/student/edit.erb
+++ b/app/views/student/edit.erb
@@ -242,6 +242,7 @@
           <div class="text-input-bg"><%= s.file_field :photo, :size=>12 %></div>
         </div>
       </div>
+       <div class="extender"></div>
     </div>
 
     <%= submit_tag "", :class => "submit_button", :value => "► #{t('update')}" %>
