pay fee defaulters redirection change and style issue in employee individual pdf
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@3231 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/public/stylesheets/employee/employee_individual_payslip_pdf.css
+++ b/public/stylesheets/employee/employee_individual_payslip_pdf.css
@@ -38,7 +38,7 @@ h2.heading{
 
 .odd{
     height:auto;
-    background: #EEEEEE;
+    background: #fff;
 
 }
 
@@ -73,7 +73,7 @@ tr.odd{
     padding: 12px 12px 12px 15px;
     border-top: 1px solid #ADACAB;
     color: #97080e;
-    background: #BCBCBA;
+    background: #EEEEEE;
 }
 
 table#pdf-table{
