right border for cce_report_pdf
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@3236 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/public/stylesheets/cce_reports/student_report_pdf.css
+++ b/public/stylesheets/cce_reports/student_report_pdf.css
@@ -109,7 +109,9 @@ table#pdf-table{
     height :500px;
 
 }
-
+table{
+    border-right: 1px solid #ADACAB;
+}
 .report{
     min-height: 1000px;
     margin: 0 auto;
