fixes style issue in firefox for cce reports
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@3237 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/public/stylesheets/cce_reports/student_wise_report.css
+++ b/public/stylesheets/cce_reports/student_wise_report.css
@@ -47,8 +47,9 @@ li.student_names, li.student_names a{
     height: 28px;
 }
 #report{
-    /*    float: left;*/
-    margin-left:  230px;
+    float: left;
+    width: 770px;
+    /*    margin-left:  230px;*/
     margin-right: 10px;
 }
 .list_name{
