added margin to report section in cce report
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@3238 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/public/stylesheets/cce_reports/student_wise_report.css
+++ b/public/stylesheets/cce_reports/student_wise_report.css
@@ -48,8 +48,8 @@ li.student_names, li.student_names a{
 }
 #report{
     float: left;
-    width: 770px;
-    /*    margin-left:  230px;*/
+    width: 750px;
+    margin-left:  20px;
     margin-right: 10px;
 }
 .list_name{
