--- a/app/views/sms/index.html.erb
+++ b/app/views/sms/index.html.erb
@@ -18,7 +18,7 @@
 #under the License. -%>
 
 <div id="content-header">
-    <%= image_tag("/images/sms/sms_icon.png") %>
+  <%= image_tag("/images/sms/sms_icon.png") %>
   <h1><%= t('sms_text') %></h1>
   <h3><%= t('home') %></h3>
   <div id="app-back-button">
@@ -28,36 +28,40 @@
 
 <div id="page-yield">
   <div class="box">
-     <div class="link-box">
+    <div class="link-box">
       <div class="link-heading"><%= link_to "#{t('sms_text')} #{t('settings')}",:action=>'settings' %></div>
       <div class="link-descr"><%= t('sms_settings_page') %></div>
     </div>
-<% if @sms_setting.application_sms_active %>
-     <div class="link-box">
-      <div class="link-heading"><%= link_to "#{t('send_sms_to_students')}",:action=>'students'%></div>
-      <div class="link-descr"><%= t('send_sms_to_students') %></div>
-    </div>
-     <div class="link-box">
-      <div class="link-heading"><%= link_to "#{t('sms_to_batches')}",:action=>'batches'%></div>
-      <div class="link-descr"><%= t('sms_to_batches') %></div>
-    </div>
-     <div class="link-box">
-      <div class="link-heading"><%= link_to "#{t('sms_to_employees')}",:action=>'employees'%></div>
-      <div class="link-descr"><%= t('sms_to_employees') %></div>
-    </div>
-     <div class="link-box">
-      <div class="link-heading"><%= link_to "#{t('sms_to_employee_department')}",:action=>'departments'%></div>
-      <div class="link-descr"><%= t('sms_to_employee_department') %></div>
-    </div>
-     <div class="link-box">
-      <div class="link-heading"><%= link_to_remote "#{t('sms_to_all')}",:url=>{:action=>'all'} %></div>
-      <div class="link-descr"><%= t('sms_to_all') %></div>
-    </div>
+    <% if @sms_setting.application_sms_active %>
+      <div class="link-box">
+        <div class="link-heading"><%= link_to "#{t('send_sms_to_students')}",:action=>'students'%></div>
+        <div class="link-descr"><%= t('send_sms_to_students') %></div>
+      </div>
+      <div class="link-box">
+        <div class="link-heading"><%= link_to "#{t('sms_to_batches')}",:action=>'batches'%></div>
+        <div class="link-descr"><%= t('sms_to_batches') %></div>
+      </div>
+      <div class="link-box">
+        <div class="link-heading"><%= link_to "#{t('sms_to_employees')}",:action=>'employees'%></div>
+        <div class="link-descr"><%= t('sms_to_employees') %></div>
+      </div>
+      <div class="link-box">
+        <div class="link-heading"><%= link_to "#{t('sms_to_employee_department')}",:action=>'departments'%></div>
+        <div class="link-descr"><%= t('sms_to_employee_department') %></div>
+      </div>
+      <div class="link-box">
+        <div class="link-heading"><%= link_to_remote "#{t('sms_to_all')}",:url=>{:action=>'all'} %></div>
+        <div class="link-descr"><%= t('sms_to_all') %></div>
+      </div>
+      <div class="link-box">
+        <div class="link-heading"><%= link_to_remote "#{t('sms_logs')}",:url=>{:action=>'all'} %></div>
+        <div class="link-descr"><%= t('view_all_messages') %></div>
+      </div>
 
-<% end %>
-<div id="sms-box" >
+    <% end %>
+    <div id="sms-box" >
 
-</div>
+    </div>
     <%= image_tag("loader2.gif",
       :align => "absmiddle",
       :border => 0,
@@ -65,5 +69,5 @@
       :style =>"display: none;" ) %>
 
 
-</div>
+  </div>
 </div>
