modified dashboard link for sms logs
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@3248 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/app/views/sms/index.html.erb
+++ b/app/views/sms/index.html.erb
@@ -54,7 +54,7 @@
         <div class="link-descr"><%= t('sms_to_all') %></div>
       </div>
       <div class="link-box">
-        <div class="link-heading"><%= link_to_remote "#{t('sms_logs')}",:url=>{:action=>'all'} %></div>
+        <div class="link-heading"><%= link_to "#{t('sms_logs')}", :action=>'show_sms_messages' %></div>
         <div class="link-descr"><%= t('view_all_messages') %></div>
       </div>
 
