--- a/app/views/exam_reports/archived_batches_exam_report.html.erb
+++ b/app/views/exam_reports/archived_batches_exam_report.html.erb
@@ -18,114 +18,48 @@
 #under the License. -%>
 
 <div id="content-header">
-  <img src="/images/examination/show_exam.png" alt="Exam" />
-  <h1>Exams</h1>
-  <h3>Generated Report</h3>
+  <%= image_tag("/images/examination/show_exam.png") %>
+  <h1>Archived Exams1</h1>
+  <h3>Grouped Exam Reports</h3>
   <div id="app-back-button">
     <%= link_to_function image_tag("/images/buttons/back.png",:border => 0), "history.back()" %>
   </div>
 </div>
 <div id="inner-tab-menu">
-  <ul>
-    <%  if permitted_to? :consolidated_exam_report,:exam %>
-      <li><%= link_to 'Consolidated Report', :action=>'consolidated_exam_report',:exam_group=>@exam_group.id %></li>
-    <% end %>
-    <%  if permitted_to? :generated_report_pdf,:exam %>
-      <li><%= link_to "PDF Report",
-          {:controller => "exam_reports", :action => "archived_batches_exam_report_pdf", :exam_group_id => @exam_group.id, :batch_id => @batch.id},:target => '_blank', :former_student=> @former_student %></li>
-    <% end %>
-  </ul>
+
 </div>
 <div id="page-yield">
-
   <% unless flash[:notice].nil? %>
     <p class="flash-msg"> <%= flash[:notice] %> </p>
   <% end %>
-  <div class="box">
-    <h3 align="center"><%= @student.batch.full_name %> - <%= @exam_group.name %></h3>
-    <div id="register">
-      <% unless @current_user.student? %>
-        <div class="header">
-          <div class="prev">
-            <%= link_to '◄',:action=>'archived_batches_exam_report',:student=>@students[@students.index(@student)-1],:exam_group_id=>@exam_group.id, :batch_id=> @student.batch_id %>
-          </div>
-          <div class="month">
-            <%= @student.full_name %>
-          </div>
-          <div class="next">
-            <%= link_to '►',:action=>'archived_batches_exam_report',:student=>@students[@students.index(@student)+1],:exam_group_id=>@exam_group.id, :batch_id=> @student.batch_id %>
-          </div>
-          <div class="extender"></div>
-        </div>
-      <% end %>
-    </div>
-    <% exam_score = [] %>
-    <% if @student.class.name == "ArchivedStudent" %>
-      <% @exams.each do |exam| %>
-        <% exam_score.push exam.archived_exam_scores.find_by_student_id(@student.id) unless exam.archived_exam_scores.find_by_student_id(@student.id).nil?  %>
-      <% end %>
-    <% else %>
-      <% @exams.each do |exam| %>
-        <% exam_score.push exam.exam_scores.find_by_student_id(@student.id) unless exam.exam_scores.find_by_student_id(@student.id).nil?  %>
-      <% end %>
-    <% end %>
-    <% total_marks_attained = 0 %>
-    <% total_max_marks = 0 %>
-    <table id="listing" align="center" width="100%" cellpadding="1" cellspacing="1">
-      <tr class="tr-head">
-        <td>Subject</td>
-        <% if @exam_group.exam_type == 'Marks' %>
-          <td>Obtained Marks</td>
-          <td>Max Marks</td>
-          <td>Percentage(%)</td>
-        <% elsif @exam_group.exam_type == 'Grades' %>
-          <td>Grades</td>
-        <% else %>
-          <td>Obtained Marks</td>
-          <td>Max Marks</td>
-          <td>Grades</td>
-          <td>Percentage(%)</td>
-        <% end %>
-      </tr>
-      <% exam_score.each do |es| %>
-        <tr class="tr-<%= cycle('odd', 'even') %>">
-          <td class="col-1"> <%= (Subject.find(es.exam.subject_id)).name  %></td>
-          <% if @exam_group.exam_type == 'Marks' %>
-            <td class="col-1"><%= es.marks || '-' %></td>
-            <% total_marks_attained = total_marks_attained+(es.marks || 0) %>
-            <td class="col-1"><%= es.exam.maximum_marks %></td>
-            <% total_max_marks = total_max_marks+es.exam.maximum_marks%>
-            <td class="col-1"><%="%.2f" %es.calculate_percentage %></td>
-          <% elsif @exam_group.exam_type == 'Grades' %>
-            <td class="col-1"><%= es.grading_level || "-" %></td>
-          <% else %>
-            <td class="col-1"><%= es.marks || "-" %></td>
-            <% total_marks_attained = total_marks_attained+(es.marks || 0) %>
-            <td class="col-1"><%= es.exam.maximum_marks %></td>
-            <% total_max_marks = total_max_marks+es.exam.maximum_marks%>
-            <td class="col-1"><%= es.grading_level || "-" %></td>
-            <td class="col-1"><%="%.2f" %es.calculate_percentage %></td>
-          <% end %>
-        </tr>
-      <% end %>
-
-      <% if @exam_group.exam_type == 'Marks' or @exam_group.exam_type == 'MarksAndGrades' %>
-        <tr class="tr-head">
-          <td>Total Marks:</td>
-          <td><%= total_marks_attained %></td><td><%= total_max_marks %></td>
-          <%  if @exam_group.exam_type == 'MarksAndGrades' %>
-            <td>-</td>
-          <% end %>
-          <td><%= "%.2f" %(total_marks_attained*100/total_max_marks) unless total_max_marks == 0 %></td>
-        </tr>
-      <% end %>
-    </table>
-
-    <% if @exam_group.exam_type == 'Marks' or @exam_group.exam_type == 'MarksAndGrades' %>
-      <% class_avg_marks = @exam_group.archived_batch_average_marks('marks') %>
-      <h5>Class Average Marks : <%= "%.2f" %class_avg_marks unless total_max_marks == 0%> | Class Average % : <%=  "%.2f" %(class_avg_marks*100/total_max_marks) unless total_max_marks == 0 %></h5>
-    <% end %>
-
-    <div class="extender"></div>
+  <h4 align="center"><%= @batch.name %> - <%= @batch.course.full_name %></h4>
+  <div id="student_list">
+    <%= render  :partial=>"student_list" %>
   </div>
+  <div id="grouped_exam_report">
+    <%= render :partial=>'grouped_exam_report' %>
+  </div>
+<%#*<div class="box">%>
+<%#*</div>%>
+
 </div>
+
+<script type="text/javascript">
+  function set_active(){
+    $$('.active-link').each(function(e){
+      e.removeClassName('active-link');
+    });
+    this.addClassName('active-link')
+  }
+  function draw_report(){
+    Element.show('loader')
+    new Ajax.Request('/exam_reports/archived_batches_exam_report',
+    {asynchronous:true, evalScripts:true,
+      parameters:'student='+this.id+'&type=<%= @type %>'+'&batch_id=<%= @batch.id %>',onSuccess:function(request){Element.hide('loader')}
+    })
+  }
+  document.observe("dom:loaded", function() {
+    $$('.student-link').invoke('observe','click',draw_report);
+    $$('.student-link').invoke('observe','click',set_active);
+  });
+</script>
