--- a/app/views/exam_reports/archived_exam_wise_report.html.erb
+++ b/app/views/exam_reports/archived_exam_wise_report.html.erb
@@ -5,48 +5,54 @@
 
 <div id="content-header">
   <img src="/images/examination/show_exam.png" alt="Exam" />
-  <h1>Exam Reports</h1>
-  <h3>Archived Exam wise Reports</h3>
+  <h1>Exam Reports1</h1>
+  <h3>Archived Grouped Exam Reports</h3>
   <div id="app-back-button">
     <%= link_to_function image_tag("/images/buttons/back.png",:border => 0), "history.back()" %>
   </div>
 </div>
 <div id="page-yield">
 
-    <% unless flash[:notice].nil? %>
+  <% unless flash[:notice].nil? %>
     <p class="flash-msg"> <%= flash[:notice] %> </p>
   <% end %>
 
- <div class="box">
-<% form_for :exam_report, :url=>{:action=>'archived_batches_exam_report'} do |x| %>
-
-<div class="text-input-bg" id="batch-select">
-<%= select :exam_report, :batch_id,
-        @batches.map {|b| [b.full_name, b.id]},
-        {:prompt => 'Select a batch'},
-        {:onChange => "#{remote_function(:url => {:controller => "exam",:action => "list_exam_types"},
-        :with => "'batch_id='+value",
-        :before => "Element.show('loader')",
-        :success => "Element.hide('loader')"
-        )}"} %>
-</div>
-
-  <div  class="text-input-bg" id="exam-group-select">
-    <%= select :exam_report, :exam_group_id, @exam_groups.map{|exam| [exam.name,exam.id]},:prompt=>'Select exam group' %>
-  </div>
-<%= image_tag("loader.gif",
-      :align => "absmiddle",
-      :border => 0,
-      :id => "loader",
-      :style =>"display: none;" ) %>
-
-    <%= submit_tag "", :value => "► View", :class => "submit_button" %>
-  <% # x.submit 'View' %>
-
-<% end %>
-
-  <div class="extender">
-
+  <div class="box">
+    <% form_for :exam_report, :url=>{:action=>'archived_batches_exam_report'} do |x| %>
+      <div class="label-field-pair">
+        <label>Select a Course :<%= image_tag("loader.gif",
+            :align => "absmiddle",
+            :border => 0,
+            :id => "loader",
+            :style =>"display: none;" ) %></label>
+        <div class="text-input-bg">
+          <%= select :exam_report, :course_id,
+            @courses.map {|c| [c.full_name, c.id]},
+            {:prompt => 'Select a course'},
+            {:onChange => "#{remote_function(:url => {:controller => "exam_reports",:action => "list_inactivated_batches"},
+            :with => "'course_id='+value",
+            :before => "Element.show('loader')",
+            :success => "Element.hide('loader')"
+            )}"} %>
+        </div>
       </div>
- </div>
+    <div class="label-field-pair">
+      <label>Select a Batch :</label>
+      <div class="text-input-bg"><div id="inactive_batches">
+          <%= select :exam_report, :batch_id,
+            @batches.map {|b| [b.full_name, b.id]},
+            {:prompt => 'Select a Batch'},{:onChange => "#{remote_function(:url => {:action => "final_archived_report_type"},
+            :with => "'batch_id='+value"
+            )}"} %></div></div>
     </div>
+    <div id="archived_report_type"></div>
+
+      <%= submit_tag "", :value => "► View", :class => "submit_button" %>
+
+    <% end %>
+
+    <div class="extender">
+
+    </div>
+  </div>
+</div>
