--- a/app/views/observation_groups/_new.erb
+++ b/app/views/observation_groups/_new.erb
@@ -18,13 +18,13 @@
       <div class="label-field-pair">
         <label for="category_name">CCE Grade Set</label>
         <div class="text-input-bg">
-          <%= f.select :cce_grade_set_id ,@grade_sets.map{|m| [m.name,m.id]} ,:prompt=>t("select_a_grade_set") %>
+          <%= f.select :cce_grade_set_id ,@grade_sets.map{|m| [m.name,m.id]} ,:prompt=>"Select a grade set" %>
         </div>
       </div>
       <div class="label-field-pair">
         <label for="category_name">Type</label>
         <div class="text-input-bg">
-          <%= f.select :observation_kind ,@observation_kinds.map{|m| [m[1],m[0]]},:prompt=>t("select_aobservation_kind") %>
+          <%= f.select :observation_kind ,@observation_kinds.map{|m| [m[1],m[0]]},:prompt=>"Select an assessment type" %>
         </div>
       </div>
       <%= f.submit "", :value => "► Create", :class => "submit_button" %>
