fixed style issue in student list
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@3253 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/app/views/exam/report_center.html.erb
+++ b/app/views/exam/report_center.html.erb
@@ -47,7 +47,7 @@
     </div>
     <div class="link-box">
       <div class="link-heading"><%= link_to 'Archived Student Reports' , :controller=> "exam_reports",:action=>'archived_exam_wise_report' %></div>
-      <div class="link-descr">Generates reports for Archived Students Exam wise</div>
+      <div class="link-descr">Generates Grouped Exam reports for Archived Students</div>
     </div>
     <div class="link-box">
       <div class="link-heading"><%= link_to 'Student Ranking per Subject' , :controller=> "exam",:action=>'subject_rank' %></div>
